--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light">
+    <!-- Подключение вафиконок -->
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" sizes="32x32">
+    <link rel="icon" type="image/svg+xml" href="./images/favicon.svg">
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png" sizes="180x180">
     <title>Сложно сосредоточиться</title>
+    <!-- Подключение стилей -->
+    <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css">
     <script src="./scripts/script.js"></script>
   </head>
   <body class="page">
     <header class="header decorated-zone">
+      <div class="rec" aria-hidden="true">rec</div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -35,6 +47,21 @@
           </li>
         </ul>
       </nav>
+      <h1 class="header__title">no focus</h1>
+      <div class="header__subtitle-wrapper">
+        <p class="header__subtitle">Что делать, когда не можешь делать ничего<br>
+        Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+        </p>
+      </div>
+
+      <div class="corner corner__top-right" aria-hidden="true"></div>
+      <div class="corner corner__bottom-left" aria-hidden="true"></div>
     </header>
+    <main class="main">
+
+    </main>
+    <footer class="footer">
+
+    </footer>
   </body>
 </html>
