--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
       </section>
       <section class="content-section">
         <h2 class="content-section_title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-        <h3 class="content-section_subtitle title__decor">5 простых (на самом деле не очень) советов</h3>
 
         <div class="article-list">
+          <h3 class="content-section_subtitle title__decor">5 простых (на самом деле не очень) советов</h3>
           <article class="content-article">
             <h3 class="content-article__title title__decor_rules">Представьте небо и облака</h2>
             <p class="content-article__text">
@@ -136,13 +136,11 @@
             </article>
           </div>
       </section>
-      <section class="content-section gallery">
-        <h3 class="heading__gallery title__decor">А можно в картинках?</h2>
-          <img 
-          src="" 
-          alt=""
-          loading="lazy"
-          >
+      <section class="content-section">
+        <div>
+        <h3 class="heading__gallery title__decor">А можно в картинках?</h3>
+        </div>
+        <div class="gallery">
           <img 
           src="./images/sunset.png" 
           alt="Закат солнца"
@@ -168,6 +166,7 @@
           alt="Улица в розовых тонах"
           loading="lazy"
           >
+        </div>
       </section>
     </main>
     <footer class="footer">
