--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link rel="apple-touch-icon" href="./images/mobile-icon.png" sizes="180x180">
     <title>Сложно сосредоточиться</title>
     <!-- Подключение стилей -->
-    <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/globals.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
     <link rel="stylesheet" href="./styles/light.css">
-    <script src="./scripts/script.js"></script>
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -62,13 +62,13 @@
 
         <div class="article-list">
           <article class="content-article">
-            <h3 class="content-article__title title__decor">Многозадачность</h2>
+            <h3 class="content-article__title title__decor">Многозадачность</h3>
             <p class="content-article__text">
               Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="https://dana.org/news-and-insights/" class="text__shadow">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
             </p>
             </article>
             <article class="content-article">
-              <h3 class="content-article__title title__decor">Дофамин</h2>
+              <h3 class="content-article__title title__decor">Дофамин</h3>
               <p class="content-article__text">
                 С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
               </p>
@@ -105,31 +105,31 @@
         <div class="article-list">
           <h3 class="content-section_subtitle title__decor">5 простых (на самом деле не очень) советов</h3>
           <article class="content-article">
-            <h3 class="content-article__title title__decor_rules">Представьте небо и облака</h2>
+            <h3 class="content-article__title title__decor_rules">Представьте небо и облака</h3>
             <p class="content-article__text">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
             </p>
             </article>
             <article class="content-article">
-              <h3 class="content-article__title title__decor_rules">Включите музыку</h2>
+              <h3 class="content-article__title title__decor_rules">Включите музыку</h3>
               <p class="content-article__text">
                 Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист с «белым шумом» или нейромузыкой.
               </p>
             </article>
             <article class="content-article">
-              <h3 class="content-article__title title__decor_rules">Прогуляйтесь</h2>
+              <h3 class="content-article__title title__decor_rules">Прогуляйтесь</h3>
               <p class="content-article__text">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" class="text__shadow">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
               </p>
             </article>
             <article class="content-article">
-              <h3 class="content-article__title title__decor_rules">Хорошо ешьте</h2>
+              <h3 class="content-article__title title__decor_rules">Хорошо ешьте</h3>
               <p class="content-article__text">
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
               </p>
             </article>
             <article class="content-article">
-              <h3 class="content-article__title title__decor_rules">Читайте</h2>
+              <h3 class="content-article__title title__decor_rules">Читайте</h3>
               <p class="content-article__text">
                 Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
               </p>
@@ -174,5 +174,6 @@
       <div class="corner corner__top-right" aria-hidden="true"></div>
       <div class="corner corner__bottom-left" aria-hidden="true"></div>
     </footer>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
